overflow fix

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -16,7 +16,7 @@ html {
 
 * {
   overflow-x: hidden;
-  overflow-y: hidden;
+  /* overflow-y: hidden; */
 }
 
 body {
@@ -202,38 +202,27 @@ body {
 }
 
 .marquee {
-  width: 100%;
-  overflow: hidden;
-  white-space: nowrap;
+  /* position: relative; */
+  width: 100vw;
+  max-width: 100%;
+  height: 200px;
+  overflow-x: hidden;
 }
 
-.marquee span {
-  display: inline-block;
-  padding-left: 100%;
+.track {
+  /* position: absolute; */
+  white-space: nowrap;
+  will-change: transform;
   animation: marquee 20s linear infinite;
 }
 
 @keyframes marquee {
-  0% {
-    transform: translateX(0%);
+  from {
+    transform: translateX(0);
   }
-  100% {
-    transform: translateX(-100%);
-  }
-}
 
-@media screen and (max-width: 767px) {
-  .marquee span {
-    animation: marquee-mobile 20s linear infinite;
-  }
-  
-  @keyframes marquee-mobile {
-    0% {
-      transform: translateX(0%);
-    }
-    100% {
-      transform: translateX(-100%);
-    }
+  to {
+    transform: translateX(-100%);
   }
 }
 
